@@ -1,5 +1,11 @@
 2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/consttab.cpp :
+	* lib/consttab.h :
+
+	  - Removed replace() and varlist() from consttab. Expressions stored
+	    in this table should already be grounded.
+
 	* lib/fact.cpp :
 
 	  - verify() functions will now ignore the varlist if it is null.
